# geo-sim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
data/initial_kg/: alliances.json  countries.json  leaders.json  relationships.json
docs/: rule_library.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Events.jsx  Simulate.jsx  WorldState.jsx
scripts/: bootstrap_kg.py  bootstrap_state.py  run_ingestion.py  run_state_builder.py  test_api.py
src/api/: main.py  report_generator.py  schemas.py
src/api/routers/: events.py  simulate.py  state.py
src/ingestion/: event_log.py  models.py
src/ingestion/classifiers/: entity_extractor.py  event_classifier.py
src/knowledge_graph/: kg_client.py  kg_queries.py  kg_updater.py  schema.py
src/learning/: error_analyzer.py  prediction_logger.py  rule_extractor.py  rule_validator.py
src/rules/: models.py  rule_engine.py  rule_store.py
src/shared/: config.py  logging.py
src/simulator/: action_space.py  models.py  path_scorer.py  rollout_engine.py  simulation_tree.py
src/state/: models.py  state_builder.py  state_serializer.py  state_store.py
src/world_model/: analog_retriever.py  context_assembler.py  llm_client.py  prediction_models.py  world_model.py
tests/: conftest.py
tests/test_state/: test_models.py
tests/test_world_model/: test_llm.py
(+7 files in other folders)
